--- a/css/custom.css
+++ b/css/custom.css
@@ -1,11 +1,46 @@
-body { counter-reset: section; }
-h1 { counter-reset: h2counter; }
-h2 { counter-reset: h3counter; }
-h3 { counter-reset: h4counter; }
-h4 { counter-reset: h5counter; }
-h5 { counter-reset: h6counter; }
-h6 { }
-h2:before {
-  counter-increment: section;
-  content: counter(section) "\0000a0\0000a0";
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
+
+ol,ul {
+  margin: 0;
+}
+
+#content>ul, #content>ol, .table-of-contents>ul, .table-of-contents>ol {
+  margin: 1em 0;
+}
+
+.bg-img {
+  opacity: .05;
+}
+/* 
+.content a {
+  box-shadow:inset 0 -4px 0 #559bcd;
+}
+
+.content a:hover {
+  background-color:#559bcd
+}
+
+.content a.anchor:hover {
+  color:#559bcd;opacity:1
+}
+
+.post-info a:hover {
+  border-bottom:1px solid #559bcd
+}
+
+#TableOfContents a:hover {
+  border-bottom:#559bcd 1px solid
+}
+
+.footnotes a {
+  box-shadow: none;
+}
+
+.footnote-ref a {
+  box-shadow: none;
+} */
